--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href='#' class="logo">Cheator <span>.</span></a>
+        <a href='/' class="logo">Cheator <span>.</span></a>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">Overview</a>
@@ -176,10 +176,10 @@
             <div class="column" data-aos="fade-up-right" data-aos-duration="3000">
                 <div class="card">
                     <div class="img-container">
-                        <img src="{% static 'asset/img/p.jpeg' %}" alt="" />
+                        <img src="{% static 'asset/img/juper.jpeg' %}" alt="" />
                     </div>
                     <h3>Muhammad Zufar</h3>
-                    <p>Explane</p>
+                    <p>AI Engineer</p>
                     <div class="icons">
                         <a href="https:\\google.com">
                             <i class="fab fa-twitter"></i>
@@ -200,10 +200,10 @@
             <div class="column" data-aos="fade-up" data-aos-duration="3000">
                 <div class="card">
                     <div class="img-container">
-                        <img src="{% static 'asset/img/p.jpeg' %}" alt="" />
+                        <img src="{% static 'asset/img/afin.jpeg' %}" alt="" />
                     </div>
                     <h3>Afin Maulana</h3>
-                    <p>Aldous 500 Stack</p>
+                    <p>All Role</p>
                     <div class="icons">
                         <a href="https:\\google.com">
                             <i class="fab fa-twitter"></i>
@@ -224,10 +224,10 @@
             <div class="column" data-aos="fade-up" data-aos-duration="3000">
                 <div class="card">
                     <div class="img-container">
-                        <img src="{% static 'asset/img/p.jpeg' %}" alt="" />
+                        <img src="{% static 'asset/img/cikal.jpeg' %}" alt="" />
                     </div>
-                    <h3>Beril Berekhya</h3>
-                    <p>Goldlane</p>
+                    <h3>Cikal Gemintang</h3>
+                    <p>Full Stack</p>
                     <div class="icons">
                         <a href="https:\\google.com">
                             <i class="fab fa-twitter"></i>
@@ -248,10 +248,10 @@
             <div class="column" data-aos="fade-up-left" data-aos-duration="3000">
                 <div class="card">
                     <div class="img-container">
-                        <img src="{% static 'asset/img/p.jpeg' %}" alt="" />
+                        <img src="{% static 'asset/img/epen.jpeg' %}" alt="" />
                     </div>
                     <h3>Rievan Averillio</h3>
-                    <p>Jungler</p>
+                    <p>AI Engineer</p>
                     <div class="icons">
                         <a href="https:\\google.com">
                             <i class="fab fa-twitter"></i>
