--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -97,7 +97,7 @@
 </head>
 <body>
 <header>
-    <a href='#' class="logo">Classroom <span>.</span></a>
+    <a href='/' class="logo">Classroom <span>.</span></a>
     <nav class="navbar">
         <a href="#opemodal" id="openProfileLink">Profile</a>
         <a href="{% url 'logout' %}">Logout</a>
@@ -137,7 +137,7 @@
     {% endif %}
     </div>
     <div class="image">
-        <img src="{% static 'asset/img/home.svg' %}" alt="Home image" />
+        <img src="{% static 'asset/img/homee.svg' %}" alt="Home image" />
     </div>
 </section>
 
