--- a/accounts/templates/class_room.html
+++ b/accounts/templates/class_room.html
@@ -15,7 +15,7 @@
         <canvas id="videoCanvas"></canvas>
         <img class="imgcanvas" id="processedImage" alt="Processed video feed">
         <div>
-            <a href="/" class="logo">Cheator <span>.</span></a>
+            <a href="/home" class="logo">Classroom <span>.</span></a>
         </div>
         <div class="controls">
             <button class="control-button" id="toggleButton">
@@ -25,98 +25,14 @@
     </div>
     <p id="studentName" style="display: none;">{{ student_name }}</p>
     <p id="className" style="display: none;">{{ class_name }}</p>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const videoCanvas = document.getElementById('videoCanvas');
-            const processedImage = document.getElementById('processedImage');
-            const toggleButton = document.getElementById('toggleButton');
-            const toggleIcon = document.getElementById('toggleIcon');
-            const socket = new WebSocket('ws://' + window.location.host + '/ws/video_feed/');
-
-            const canvasContext = videoCanvas.getContext('2d');
-            let stream = null;
-            let cameraActive = false;
-            let proses = false;
-            const studentName = document.getElementById('studentName').textContent; // Misalkan ada elemen dengan id studentName
-            const className = document.getElementById('className').textContent; // Misalkan ada elemen dengan id className
-
-            function startCamera() {
-                navigator.mediaDevices.getUserMedia({ video: { width: 640, height: 480 } })
-                    .then((mediaStream) => {
-                        stream = mediaStream;
-                        videoCanvas.width = 640;
-                        videoCanvas.height = 480;
-
-                        const videoTrack = stream.getVideoTracks()[0];
-                        const video = document.createElement('video');
-                        video.srcObject = stream;
-                        video.play();
-
-                        video.addEventListener('loadedmetadata', () => {
-                            function drawFrame() {
-                                if (!cameraActive || proses) return;
-
-                                canvasContext.drawImage(video, 0, 0, videoCanvas.width, videoCanvas.height);
-
-                                videoCanvas.toBlob((blob) => {
-                                    const reader = new FileReader();
-                                    reader.onloadend = () => {
-                                        socket.send(reader.result);
-                                        proses = true;
-                                    };
-                                    reader.readAsArrayBuffer(blob);
-                                }, 'image/jpeg', 0.3);
-                            }
-                            socket.send("online");
-                            socket.send(studentName);
-                            socket.send(className);
-
-                            setInterval(drawFrame, 50);
-
-
-                            socket.onmessage = (event) => {
-                                proses = false;
-                                const data = JSON.parse(event.data);
-                                processedImage.src = data.image;
-                                processedImage.style.display = 'block';
-    
-                                console.log("Status Kecurangan:", data.status);
-                            };
-
-                            cameraActive = true;
-                            toggleButton.classList.add('active');
-                            toggleIcon.textContent = 'videocam';
-                        });
-                    })
-                    .catch((err) => {
-                        console.error("Error accessing camera: ", err);
-                    });
-            }
-
-            function stopCamera() {
-                if (stream) {
-                    let tracks = stream.getTracks();
-                    tracks.forEach(track => track.stop());
-                    stream = null;
-                    cameraActive = false;
-                    videoCanvas.style.display = 'none';
-                    processedImage.style.display = 'none';
-                    toggleButton.classList.remove('active');
-                    toggleIcon.textContent = 'videocam_off';
-                    setTimeout(() => {
-                        location.reload();
-                    }, 200);
-                }
-            }
-
-            toggleButton.addEventListener('click', () => {
-                if (cameraActive) {
-                    stopCamera();
-                } else {
-                    startCamera();
-                }
-            });
-        });
-    </script>
+    <div id="consentModal" class="modal">
+        <div class="modal-content">
+            <img src="{% static 'asset/img/warning.svg' %}" alt="Warning Icon" class="modal-image">
+            <p>Segala bentuk kecurangan akan direkam untuk pengawasan. Data Anda tetap aman dan terjaga.</p>
+            <small>*Privasi Anda tetap terjaga sesuai kebijakan yang berlaku.*</small>
+            <button id="acceptButton">OK</button>
+        </div>
+    </div>
+    <script src="{% static 'js/control.js' %}"></script>
 </body>
 </html>
