--- a/accounts/templates/class_room.html
+++ b/accounts/templates/class_room.html
@@ -28,7 +28,7 @@
     <div id="consentModal" class="modal">
         <div class="modal-content">
             <img src="{% static 'asset/img/warning.svg' %}" alt="Warning Icon" class="modal-image">
-            <p>Segala bentuk kecurangan akan direkam untuk pengawasan. Data Anda tetap aman dan terjaga.</p>
+            <p>Segala bentuk kecurangan akan direkam untuk pengawasan.</p>
             <small>*Privasi Anda tetap terjaga sesuai kebijakan yang berlaku.*</small>
             <button id="acceptButton">OK</button>
         </div>
